--- a/aboutme.html
+++ b/aboutme.html
@@ -1,27 +1,33 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!doctype html>
-<body style="background-color:powderblue;">
-	<html lang="en">
-	  <head>
+<html lang="en">
+	<head>
+	    <style>
+            body {
+            background-image: url("images/Background Image.jpg");
+            }
+        </style>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
-	  </head>
-	  <body>
-    <a href="index.html">Home</a>
+	 </head>
+    <body style="color:White;">
+    <a href="Home.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <h1>This is my About Me Page!</h1>
-    <img src="images/kneeofjustice.jpg" height="250">
-    <br>
-    <body>My name is Isaac Canales, I'm curently a Senior at Rowland High School.</body>
-	</html>
-    <h1>Interests!</h1>
-    <body> 
-        I love playing video games
+    <center>
+        <h1 style="font-size:56px; color:white; text-align:center">Isaac Canales's About Me Page</h1>
+        <img src="images/kneeofjustice.jpg" height="250">
         <br>
-        Sleeping
-        <br>
-        Eating
-        <br>
-        Browsing the internet for some dank memes
+        <p style="color:white;">My name is Isaac Canales, I'm curently a Senior at Rowland High School.</body>
+        <h1>Interests!</h1>
+        <body style="color:white;">
+            I love playing video games
+            <br>
+            Sleeping
+            <br>
+            Eating
+            <br>
+            Reddit
         </body>
+    </center>
+    </body>
