--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,31 @@
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <!doctype html>
-	<html lang="en">
-	  <head>
+<html lang="en">
+	<head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
-	  </head>
-	  <body>
-    <a href="index.html">Home</a>
+	    <style>
+          body {
+            background-image: url("images/Background Image.jpg");
+          }
+        </style>
+	</head>
+<body style="color:White;">
+    <a href="Home.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+</body>
+<body>
+  <center>
+   <h1 align="center" style="color:White;">Isaac Canales's CSP Portfolio</h1>
+    <img src="images/Portfolio.jpg" height="250">
     <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
-    </a>
-	  </body>
+    <h1 align="center" style="color:White;">Projects</h1>
+    <br>
+    <a target="_blank" href="http://ai2.appinventor.mit.edu/?galleryId=6229167152300032">
+      <img src="images/ayylmao.PNG" height="400">
+      </a>
+      
+  </center>
+</body>
 	</html>
