--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 <body>
     <body style="color:White;">
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="aboutme.html">About Me</a>
      <h1 align="center" style="color:White;">This is Isaac Canales's Home page!</h1>
