--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 	    <title>Portfolio</title>
 	 </head>
     <body style="color:White;">
-    <a href="Home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <center>
