--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
         <h1 style="font-size:56px; color:white; text-align:center">Isaac Canales's About Me Page</h1>
         <img src="images/kneeofjustice.jpg" height="250">
         <br>
-        <p style="color:white;">My name is Isaac Canales, I'm curently a Senior at Rowland High School.</body>
+        <p style="color:white;">My name is Isaac Canales, I'm currently a Senior at Rowland High School.</body>
         <h1>Interests!</h1>
         <body style="color:white;">
             I love playing video games
