--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	    <style>
-          body {
+            body {
             background-image: url("images/Background Image.jpg");
           }
         </style>
@@ -17,15 +17,47 @@
 </body>
 <body>
   <center>
-   <h1 align="center" style="color:White;">Isaac Canales's CSP Portfolio</h1>
+    <u>
+        <h1 align="center" style="color:White; font-size:56px;">Isaac Canales's CSP Portfolio</h1>
+    </u>
     <img src="images/Portfolio.jpg" height="250">
     <br>
-    <h1 align="center" style="color:White;">Projects</h1>
+    <h1 style="color:white; font-size:16px">Below you will find some of the projects my partner's and I have done so far.</h1>
+    <u>
+        <h1 align="center" style="color:White; font-size:32px">Projects</h1>
+    </u>
+    <br>
+    <a style="color:white; font-size:22px;">Scratch Project</a>
+    <br>
+    <a href="https://scratch.mit.edu/projects/174723531/">
+        <img src="images/sgb_final.png" height="400">
+        </a>
+    <br>
+        <h1 style="color:white; font-size:16px;">For my Scratch Project, my partner Stacey Ramirez and I created a version of the Super Mario Brothers game with a twist. The project took about 5 days of work in-class and at home.</h1>
+    <br>
+    <a style="color:white; font-size:22px;">App Inventor Project</a>
     <br>
     <a target="_blank" href="http://ai2.appinventor.mit.edu/?galleryId=6229167152300032">
       <img src="images/ayylmao.PNG" height="400">
       </a>
-      
+    <br> 
+        <h1 style="color:white; font-size:16px;">For my App Inventor project, an easy to use and practical shopping list Rick Kitada and I made in about 6 days.</h1>
+    <br>
+    <a style="color:white; font-size:22px;">Flow Chart for Python Interactive Story Project</a>
+    <br>
+        <a href="https://www.lucidchart.com/documents/view/91728152-74ae-4897-8bd8-ea864e4d55c1">
+            <img src="images/flow_chart.png" height="400">
+        </a>
+    <br>
+        <h1 style="color:white; font-size:16px;">For my Python Project, my partner Juvenchy Geoffry and I, had to create a flow chart in order to plan out our interactive story on repl.it before actually programming it.</h1>
+    <br>
+        <a style="color:white; font-size:22px;">Repl.it Python Interactive Story Project</a>
+    <br>
+        <a href="https://repl.it/NgPl/8">
+            <img src="images/interactive story.png" height="400">
+        </a>
+    <br>
+        <h1 style="color:white; font-size:16px;">For the actual Python Project on Repl.it, Juvenchy and I had created a story in which the the user takes control of what a bit in the virtual would feel if it were sentient. The story itself, is not too spectalur I will admit, but it does work in the end.</h1>
   </center>
 </body>
 	</html>
