--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
         <a href="index.html">Home</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="aboutme.html">About Me</a>
-     <h1 align="center" style="color:White;">This is Isaac Canales's Home page!</h1>
+    </body>
+    <br>
+<center>
+    <u>
+    <a align="center" style="color:White; font-size:56px;">Isaac Canales's Home Page</a>
+    </u>
+</center>
+</body>
+</body>
+<br>
+<body>
+    <body style="color:White;">
+    <center>
+        <img src="images/me.jpg" height="250">
+    <br>
+        <h1 style="font-size:16p;">Welcome to my home page! you can navigate to my portfolio at the top of this page if you would like to see some of the work I have done. :)</h1>
+    </center>
+    </body>
 </body>
 </html>
